Added modifications across the entire project folder

--- a/N8/Exercise/n8_cupiSports/.project
+++ b/N8/Exercise/n8_cupiSports/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>n8_cupiDeportes</name>
+	<name>n8_cupiSports</name>
 	<comment></comment>
 	<projects>
 	</projects>
